--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+ <!DOCTYPE html>
+<html>
+<head>
+    <title>Title of the document</title>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@fasttardigrade">
+    <meta name="twitter:title" content="sample title">
+    <meta name="twitter:description" content="lorem ipsum dolor sit amet consectetur adipscit et nulla pariatur">
+    <meta name="twitter:image:src" content="http://libertinbreton.github.io/prototype/cia_logo.png">
+</head>
 
+<body>
+The content of the document......
+</body>
+
+</html> 
