--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <meta name="twitter:site" content="@fasttardigrade">
     <meta name="twitter:title" content="sample title">
     <meta name="twitter:description" content="lorem ipsum dolor sit amet consectetur adipscit et nulla pariatur">
-    <meta name="twitter:image" content="http://libertinbreton.github.io/prototype/cia_logo.png?foo=118283827382">
+    <meta name="twitter:image" content="http://libertinbreton.github.io/prototype/cia_logo.png?foo=wqewqeqie">
 </head>
 
 <body>
