--- a/bar.html
+++ b/bar.html
@@ -4,11 +4,13 @@
     <title>Title of the document</title>
     <meta name="twitter:card" content="photo">
     <meta name="twitter:site" content="@fasttardigrade">
+    <meta name="twitter:title" content="ahahah foto">
     <meta name="twitter:image:src" content="http://libertinbreton.github.io/prototype/bar.png">
 </head>
 
 <body>
 The content of the document......
+
 </body>
 
 </html> 
