--- a/bar.html
+++ b/bar.html
@@ -5,6 +5,7 @@
     <meta name="twitter:card" content="photo">
     <meta name="twitter:site" content="@fasttardigrade">
     <meta name="twitter:title" content="ahahah foto">
+    <meta name="twitter:description" content="schcreugneugneu">
     <meta name="twitter:image:src" content="http://libertinbreton.github.io/prototype/bar.png">
 </head>
 
