--- a/bar.html
+++ b/bar.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Title of the document</title>
-    <meta name="twitter:card" content="photo">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@fasttardigrade">
     <meta name="twitter:title" content="ahahah foto">
     <meta name="twitter:description" content="schcreugneugneu">
