--- a/foo.html
+++ b/foo.html
@@ -3,6 +3,9 @@
 <head>
     <title>Title of the document</title>
     <meta name="twitter:card" content="photo">
+    <meta name="twitter:site" content="@fasttardigrade">
+    <meta name="twitter:title" content="ahahah foto">
+    <meta name="twitter:description" content="schcreugneugneu">
     <meta name="twitter:image:src" content="http://libertinbreton.github.io/prototype/foo.png?foo=2381923">
 </head>
 
