--- a/foo.html
+++ b/foo.html
@@ -6,7 +6,7 @@
     <meta name="twitter:site" content="@fasttardigrade">
     <meta name="twitter:title" content="ahahah foto">
     <meta name="twitter:description" content="schcreugneugneu">
-    <meta name="twitter:image:src" content="http://libertinbreton.github.io/prototype/foo.png?foo=2381923">
+    <meta name="twitter:image:src" content="http://libertinbreton.github.io/prototype/foo.png?foo=013923i92">
 </head>
 
 <body>
